--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ reqwest = "0.11.2"
 serde_json = "1.0.64"
 sxd-xpath = "0.4.2"
 sxd-document = "0.3.2"
+serde = { version = "1.0.125", features = ["derive"] }
+chrono = { version = "0.4.19", features = ["serde"] }
