--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 futures = "0.3.13"
-tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "0.2.25", features = ["macros", "rt-threaded"] }
 clap = "2.33.3"
 reqwest = "0.10.10"
 serde_json = "1.0.64"
